# SmartCalc_v1.0

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  MakeFile  calc_polish_n.c  check_parsed_str.c  dvi.html  dvi_config  get_elem_from_string.c  main.c  main.cpp  parser.c  polish_notation.c  s21_smart_calc.c  smart_calc.h  stack.c  stack.h
src/backend/: calc_polish_n.c  check_parsed_str.c  parser.c  polish_notation.c  s21_smart_calc.c  s21_smart_calc_back.c  stack.c  stack.h
src/backend/tests/: test.c  test.h  test_calc_polish_n.c  test_check_parsed.c  test_parser.c  test_stack.c
src/gui/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h  smartcalc.cpp  smartcalc.h  smartcalc.ui
src/html/: files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.md5
src/html/search/: all_0.js  searchdata.js
src/tests/: stack.c  test.c  test.h  test_parser.c  test_stack.c  tests.h
